# fear_factory

./: .envrc  .gitattributes  CHANGELOG.md  Cargo.toml  README.md  devenv.nix  devenv.yaml
.cargo/: config.toml
.github/workflows/: docs.yaml  release-please.yaml  release.yaml
assets/: alphabet-prompts.aseprite  build-icons.aseprite  camera.aseprite  constructor.aseprite  conveyor.aseprite  conveyor_holes.aseprite  deposits.aseprite  fear_factory.manifest.toml  input-mode-icons.aseprite  items.aseprite  names.toml  power-pole.aseprite  terrain.aseprite
assets/hud/: box.aseprite  portrait.aseprite
assets/icons/: bird.aseprite  frog.aseprite  space.aseprite
assets/items/: iron_ingot.item.toml  iron_ore.item.toml
assets/manifest/: deposits.toml  items.toml  recipes.toml  structures.toml
assets/manifests/deposits/: coal.deposit.toml  fauna_a.deposit.toml  flora_a.deposit.toml  iron_ore.deposit.toml
assets/manifests/items/: coal.item.toml  doll.item.toml  ectoplasm.item.toml  fauna_a.item.toml  flora_a.item.toml  iron_plate.item.toml  quintessence.item.toml  ritual_doll.item.toml  sack.item.toml
assets/manifests_legacy/: deposits.toml  structures.toml
assets/recipes/: iron_plate.recipe.toml
assets/structures/: coal_generator.aseprite  merger.aseprite  miner.aseprite  windmill.aseprite
docs/: book.toml  index.md  workflows.md
docs/design/: index.md  interactions.md  terminology.md
docs/src/: SUMMARY.md  logistics.md  progression.md  resource_node.md  resources.md  structures.md  world.md
src/: animation.rs  audio.rs  build.rs  camera.rs  dev_tools.rs  dismantle.rs  hotbar.rs  info.rs  input.rs  lib.rs  machine.rs  main.rs  power.rs  prefabs.rs  sandbox.rs  world.rs
src/assets/: indexing.rs  manifest.rs  mod.rs  tracking.rs
src/gameplay/: dismantle.rs  highlight.rs  mod.rs  player.rs  random.rs  sprite_sort.rs  storage.rs  y_sort.rs
src/input/: build.rs  camera.rs  cursor.rs  input_map.rs  mod.rs  power_line.rs
src/item/: assets.rs  collection.rs  compendium.rs  inventory.rs  item_id.rs  manifest.rs  mod.rs  recipes.rs  stack.rs
src/loading/: manifest.rs  mod.rs  registries.rs  screen.rs
src/logistics/: conveyor.rs  conveyor_belt.rs  conveyor_hole.rs  io.rs  item.rs  mod.rs
src/machine/: assets.rs  build.rs  frequency.rs  io.rs  mod.rs  power.rs  prefabs.rs  progress.rs  work.rs
src/power/: grid.rs  line.rs  mod.rs  pole.rs  socket.rs
src/recipe/: assets.rs  manifest.rs  mod.rs  process.rs  progress.rs  select.rs
src/sandbox/: build.rs  deposit.rs  mod.rs  sandbox.rs
src/screens/: gameplay.rs  loading.rs  mod.rs  splash.rs
src/simulation/: dismantle.rs  mod.rs
src/theme/: widgets.rs
src/ui/: highlight.rs  hotbar.rs  input_mode.rs  interactable.rs  mod.rs  widgets.rs  y_sort.rs
src/widgets/: item.rs  item_plate.rs  mod.rs  person_badge.rs  recipe_plate.rs  resource.rs  resource_plate.rs  slot.rs  tooltip.rs
src/world/: assets.rs  build.rs  deposit.rs  mod.rs  terrain.rs
(+160 files in other folders)
