[package]
name = "bevy_factory"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["wayland"] }
bevy-inspector-egui = "0.33.1"
bevy_aseprite_ultra = "0.6.1"
humantime-serde = "1.1.1"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"
toml = "0.9.5"

[features]
default = ["dev_native"]
dev = [
  "bevy/dynamic_linking",
  "bevy/bevy_dev_tools",
  "bevy/bevy_ui_debug",
  "bevy/track_location",
]
dev_native = [
  "dev",
  "bevy/file_watcher",
  "bevy/embedded_watcher",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
codegen-units = 1
lto = "thin"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
